# miden-node

./: .gitignore  .release-plz.toml  ACCOUNTTREEBACKEND_ANALYSIS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  alt_approach.txt  bench_node.sh  rustfmt.toml
.github/ISSUE_TEMPLATE/: 3-task.yml
.github/actions/build_package/: action.yml
.github/actions/debian/: action.yml  node_faucet.yml  proving_service.yml
.github/actions/install-rocksdb/: action.yml
.github/workflows/: book.yml  build-docker.yml  build-faucet-docker.yml  crates-check.yml  deploy.yml  lint.yml  msrv.yml  network-monitor.yml  network-monitoring.yml  publish-deb-node-faucet.yml  publish-deb-proving-service.yml  publish-debian-all.yml  publish-debian-prover.yml  publish-debian.yml  publish-docker.yml  publish-dry-run.yml  publish-main.yml  publish.yml  release-plz-dry-run.yml  release-plz.yml  stress-test-check.yml  test-beta.yml  test.yml
crates/block-producer/: Cargo.toml
crates/block-producer/src/: errors.rs  errors_test.rs  lib.rs  server.rs
crates/block-producer/src/batch_builder/: mod.rs
crates/block-producer/src/block_builder/: mod.rs
crates/block-producer/src/domain/: batch.rs  transaction.rs
crates/block-producer/src/mempool/: batch_graph.rs  batches.rs  budget.rs  mod.rs  nodes.rs  state.rs  state_dag.rs  subscription.rs  tests.rs  transaction_expiration.rs  transaction_graph.rs  transactions.rs
crates/block-producer/src/server/: mod.rs  tests.rs
crates/block-producer/src/store/: mod.rs
crates/block-producer/src/test_utils/: account.rs  batch.rs  block.rs  mod.rs  proven_tx.rs
crates/block-producer/src/validator/: mod.rs
crates/grpc-error-macro/: Cargo.toml  README.md
crates/grpc-error-macro/src/: lib.rs
crates/large-smt/: Cargo.toml
crates/large-smt/src/: lib.rs  rocksdb.rs
crates/node-builder/: Cargo.toml
crates/node-builder/examples/: simple.rs
crates/node-builder/src/: lib.rs
crates/ntx-builder/: Cargo.toml
crates/ntx-builder/src/: actor.rs  block_producer.rs  builder.rs  cache.rs  coordinator.rs  lib.rs  note.rs  prover.rs  rpc.rs  server.rs  state.rs  store.rs  transaction.rs
crates/ntx-builder/src/actor/: account_state.rs  execute.rs  inflight_note.rs  mod.rs  note_state.rs
crates/ntx-builder/src/builder/: block_producer.rs  coordinator.rs  data_store.rs  mod.rs  prover.rs  store.rs
crates/ntx-builder/src/builder/data_store/: account_cache.rs  mod.rs
crates/ntx-builder/src/builder/server/: mod.rs  state.rs
crates/ntx-builder/src/state/: account.rs  mod.rs  note.rs  notes.rs  tests.rs
crates/panic-macro/: Cargo.toml
crates/panic-macro/src/: lib.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: client.rs  errors.rs  lib.rs
crates/proto/src/clients/: error.rs  mod.rs
crates/proto/src/domain/: account.rs  batch.rs  block.rs  digest.rs  errors.rs  mempool.rs  merkle.rs  mod.rs  note.rs  nullifier.rs  proof_request.rs  transaction.rs  word.rs
crates/proto/src/errors/: block_producer.rs  mod.rs  store.rs
crates/proto/src/ntx_builder/: mod.rs
crates/proving-service-client/: Cargo.toml  build.rs
crates/proving-service-client/src/: lib.rs
crates/proving-service-client/src/proving_service/: batch_prover.rs  block_prover.rs  tx_prover.rs
crates/remote-prover-client/: Cargo.toml
crates/remote-prover-client/src/: lib.rs
crates/remote-prover-client/src/remote_prover/: batch_prover.rs  block_prover.rs  tx_prover.rs
crates/rocksdb-cxx-linkage-fix/: Cargo.toml
crates/rocksdb-cxx-linkage-fix/src/: lib.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc-client/: Cargo.toml  README.md
crates/rpc-client/src/: api.rs  errors.rs  interceptor.rs  lib.rs  web_api.rs
crates/rpc/src/: lib.rs  tests.rs
crates/rpc/src/client/: api.rs  interceptor.rs  mod.rs
crates/rpc/src/server/: accept.rs  api.rs  health.rs  mod.rs  transaction_helpers.rs  validator.rs  version.rs
crates/store/: .env  Cargo.toml  README.md  build.rs  schema.patch
crates/store/benches/: account_tree_historical.rs
crates/store/src/: blocks.rs  errors.rs  foo.rs  genesis.rs  inner_forest.rs  lib.rs  serialization  state.rs
crates/store/src/accounts/: mod.rs  tests.rs
crates/store/src/db/: manager.rs  migration.rs  migrations.rs  mod.rs  models.rs  schema.rs  tests.rs  (+3 more)
crates/utils/: Cargo.toml
crates/utils/src/: account.rs  config.rs  cors.rs  errors.rs  grpc.rs  lib.rs  limiter.rs  logging.rs  lru_cache.rs  network_note.rs  note_tag.rs  panic.rs
crates/validator/: Cargo.toml  README.md
crates/validator/migrations/2025-10-15-212835-0000_validator/: up.sql
crates/validator/src/: lib.rs  tx_validation.rs
crates/validator/src/block_validation/: mod.rs
crates/validator/src/db/: conv.rs  mod.rs  models.rs  queries.rs  schema.rs
crates/validator/src/db/migrations/2025062000000_setup/: up.sql
crates/validator/src/server/: data_store.rs  mod.rs  submit.rs  validate.rs
crates/validator/src/tx_validation/: data_store.rs  mod.rs
docs/internal/: book.toml
docs/internal/src/: store.md
docs/src/developer/: block-producer.md  codebase.md  rpc.md
docs/src/operator/: architecture.md  installation.md  monitoring.md  usage.md
docs/src/user/: rpc.md
packaging/faucet/: miden-faucet.service
packaging/node/: miden-node.service
packaging/prover/: miden-prover.service
packaging/prover-proxy/: miden-prover-proxy.service
proto/: Cargo.toml  build.rs
proto/proto/: account.proto  block.proto  block_producer.proto  merkle.proto  mmr.proto  note.proto  ntx_builder.proto  proxy_status.proto  remote_prover.proto  requests.proto  responses.proto  rpc.proto  smt.proto  store.proto  transaction.proto  validator.proto  word.proto  worker_status.proto
proto/proto/internal/: store.proto  validator.proto
proto/proto/store/: block_producer.proto  ntx_builder.proto  rpc.proto  shared.proto
proto/proto/types/: account.proto  blockchain.proto  errors.proto  note.proto  primitives.proto  shared.proto
proto/src/: lib.rs
scripts/: check-msrv.sh  publish-crates.sh  reflow.awk  reflow.sh
tests/: Cargo.toml  rpc.rs
tests/integration/: main.rs
(+65 files in other folders)
