[package]
authors.workspace      = true
description            = "Integration Tests for the Miden node"
edition.workspace      = true
license.workspace      = true
name                   = "miden-node-tests"
publish                = false
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version                = "0.9.0"

[lints]
workspace = true

[dependencies]
miden-node-proto      = { path = "../crates/proto" }
miden-node-rpc        = { path = "../crates/rpc" }
miden-node-rpc-client = { path = "../crates/rpc-client" }
miden-node-store      = { path = "../crates/store" }

[dev-dependencies]
tempfile = { version = "3.5" }
tokio    = { workspace = true }
tonic    = { workspace = true }
url      = { workspace = true }

[[test]]
name = "rpc"
path = "rpc.rs"
