[package]
description            = "Miden node's network transaction builder component"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node"]
license.workspace      = true
name                   = "miden-node-ntx-builder"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version                = "0.9.0"

[lints]
workspace = true

[dependencies]
anyhow                       = { workspace = true }
async-trait                  = { workspace = true }
miden-lib                    = { workspace = true }
miden-node-proto             = { workspace = true }
miden-node-utils             = { workspace = true }
miden-objects                = { workspace = true }
miden-proving-service-client = { workspace = true, features = ["tx-prover"] }
miden-tx                     = { workspace = true, features = ["async"] }
thiserror                    = { workspace = true }
tokio                        = { workspace = true, features = ["full"] }
tokio-stream                 = { workspace = true }
tonic                        = { workspace = true }
tower-http                   = { workspace = true }
tracing                      = { workspace = true }
url                          = { workspace = true }
[dev-dependencies]
miden-node-test-macro = { path = "../test-macro" }
