[package]
authors.workspace      = true
description            = "Miden node's validator component"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["validator", "miden", "node"]
license.workspace      = true
name                   = "miden-node-validator"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[features]

[dependencies]
anyhow = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
